--- a/index.html
+++ b/index.html
@@ -255,13 +255,12 @@
       color: #fefce8;
     }
 
-    .cell.related:not(.selected) {
-      background: #020617;
-    }
-
     .cell.same-value:not(.selected) {
-      background: #111827;
-    }
+  background: rgba(250, 204, 21, 0.18);      /* soft yellow glow */
+  box-shadow: inset 0 0 0 1px rgba(250, 204, 21, 0.7);
+  color: #facc15;                             /* brighter text */
+  font-weight: 700;
+}
 
     .cell.conflict {
       color: var(--error);
